--- a/src/CSS/responsive.css
+++ b/src/CSS/responsive.css
@@ -259,14 +259,14 @@
             border-radius: 0.6rem;
             border: none;
     
-            
+            color: black;
             box-shadow: 0.02rem 0.15rem 0.1rem black;
     }
     
     .cvText {
         font-size: 1.5rem;
         margin: 0;
-    
+        color: black;
         margin: auto;
         margin-left: 2%;
         font-weight: 300;
