--- a/src/CSS/static.css
+++ b/src/CSS/static.css
@@ -16,6 +16,7 @@ a { color: inherit; }
 .Navbar {
     
     display: flex;
+    justify-content: space-between;
     margin-bottom: 3rem;
     width: 100%;
     height: 3rem;
@@ -56,9 +57,14 @@ a { color: inherit; }
     margin-left: 20%;
     margin-right: 1rem;
     height: fit-content;
-    display: flex;
-    flex-direction: column;
     box-shadow: 0.02rem 0.1rem black;
+}
+
+.menuLogoPair {
+    width: 100%;
+    display: flex;
+    justify-content: right;
+    margin-right: 3%;
 }
 
 .textWrap {
@@ -74,7 +80,6 @@ a { color: inherit; }
 }
 
 .MenuOpenButton {
-    margin-right: 2%;
 }
 
 
@@ -116,6 +121,12 @@ a { color: inherit; }
     height: 8rem;
 }
 
+.cardImageContri{
+    height: 8rem;
+    width: 50%;
+    margin-left: 25%;
+}
+
 .ProjectButton {
     width: 80%;
     margin-left: 10%;
@@ -128,6 +139,17 @@ a { color: inherit; }
 }
 
 .projectsPage {
+    border-radius: 0 0 1rem 1rem;
+    height: 20rem;
+    width:70%;
+    margin: 15%;
+    margin-top: 1%;
+    background-color: white;
+    position: absolute;
+    transition: all 1s linear;
+}
+
+.ContriPage {
     border-radius: 0 0 1rem 1rem;
     height: 20rem;
     width:70%;
