--- a/src/CSS/responsive.css
+++ b/src/CSS/responsive.css
@@ -15,70 +15,74 @@
 
     /***************************************************Navbar*******************************************/
 
-        .Navbar {
-            display: flex;
-            justify-content: space-between;
-            width: 100%;
-            height: 4rem;
-            background-color: black;
-            box-shadow: 0.02rem 0.1rem 0.4rem black;
-        }
-
-        .navbarText {
-            margin: auto;
-            margin-left: 1%;
-            font-size: 2rem;
-            color: white;
-        }
-
-        
-.navbarTextNavigate {
-    font-size: 0.9rem;
-    margin: 0;
-    color: white;
-    margin-left: 10%;
-    font-weight: 500;
-    margin-top: 10%;
-    margin-bottom: 10%;
-}
-
-.navbarDiv {
+    .UpNavbar {
+        height: 5rem;
+        width: 100%;
+    }
     
-    border-radius: 0 0 1rem 1rem ;
-    z-index: 5;
-    padding: 1rem;
-    width: 20%;
-    margin-top: 3rem;
-    background-color: black;
-    margin-left: 80%;
-    margin-right: 1rem;
-    height: fit-content;
-    display: flex;
-    flex-direction: column;
-    box-shadow: 0.02rem 0.1rem black;
-}
-
-.menuLogoPair {
-    width: 100%;
-    display: flex;
-    justify-content: right;
-    margin-right: 3%;
-}
-
-.textWrap {
-    background-color: black;
-    border-color: white;
-    border: solid;
-    border-width: 0.1rem 0 0;
-    padding: auto;
-}
-
-.crossLogo {
-    margin-left: 80%;
-}
-
-.MenuOpenButton {
-}
+    .Navbar {
+        width: 80%;
+        background-color: rgb(60, 60, 60);
+        display: flex;
+        position: fixed;
+        justify-content: space-evenly;
+        height: 3rem;
+        border-radius: 0.5rem;
+        margin-left: 9%;
+        margin-top: 2rem;
+        z-index: +10;
+        box-shadow: 4px 4px 4px black;
+        
+    }
+    
+    .ClickIcon {
+        height: 2rem;
+        margin: auto;
+    }
+    
+    .crossIcon {
+        height: 2.5rem;
+        margin: auto;
+        margin-left: 0;
+        margin-right: 0;
+    }
+    
+    .SmallNavbar {
+        width: 30%;
+        background-color: rgb(60, 60, 60);
+        display: flex;
+        position: fixed;
+        justify-content: space-evenly;
+        height: 3rem;
+        border-radius: 0.5rem;
+        margin-left: 35%;
+        margin-top: 2rem;
+        z-index: +5;
+        box-shadow: 4px 4px 4px black;
+    }
+    
+    .subNavbar {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: rgb(161, 160, 160);
+        font-size: 2.5rem;
+        font-weight: 500;
+    }
+    
+    .crossLogo {
+        margin-left: 80%;
+    }
+    
+    .MenuDivider {
+        color: black;
+        font-size: 1.5rem;
+        font-weight: 10;
+        margin: auto;
+        margin-left: 0;
+        margin-right: 0;
+    }
+    
 
 
 
