--- a/src/CSS/static.css
+++ b/src/CSS/static.css
@@ -5,7 +5,10 @@
     
 }
 
-a { color: inherit; } 
+a { 
+    color: inherit; 
+    text-decoration: none;
+} 
 
 .LogoParts {
     margin-top: 1rem;
@@ -13,72 +16,75 @@ a { color: inherit; }
 }
 /***************************************************Navbar*******************************************/
 
+.UpNavbar {
+    height: 5rem;
+    width: 100%;
+}
+
 .Navbar {
-    
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 3rem;
-    width: 100%;
-    height: 3rem;
-    background-color: black;
-    box-shadow: 0.02rem 0.1rem 0.4rem black;
-}
-
-.navbarText {
-    font-weight: 600;
-    font-size: 1.2rem;
-    margin: auto;
-    color: white;
-    margin-left: 5%;
-}
-
-.navbarTextNavigate {
-    font-size: 0.9rem;
-    margin: 0;
-    color: white;
-    margin-left: 10%;
-    font-weight: 500;
-    margin-top: 10%;
-    margin-bottom: 10%;
-}
-
-@keyframes max-height {
-    
-}
-
-.navbarDiv {
-    border-radius: 0 0 1rem 1rem ;
-    z-index: 5;
-    padding: 1rem;
     width: 80%;
-    margin-top: 3rem;
-    background-color: black;
-    margin-left: 20%;
-    margin-right: 1rem;
-    height: fit-content;
-    box-shadow: 0.02rem 0.1rem black;
-}
-
-.menuLogoPair {
-    width: 100%;
+    background-color: rgb(60, 60, 60);
     display: flex;
-    justify-content: right;
-    margin-right: 3%;
+    position: fixed;
+    justify-content: space-evenly;
+    height: 2.5rem;
+    border-radius: 0.5rem;
+    margin-left: 9%;
+    margin-top: 2rem;
+    z-index: +10;
+    padding: 1%;
+    box-shadow: 4px 4px 4px black;
+    
 }
 
-.textWrap {
-    background-color: black;
-    border-color: white;
-    border: solid;
-    border-width: 0.1rem 0 0;
-    padding: auto;
+.ClickIcon {
+    height: 2rem;
+    margin: auto;
+}
+
+.crossIcon {
+    height: 1.2rem;
+    margin: auto;
+    margin-left: 0;
+    margin-right: 0;
+}
+
+.SmallNavbar {
+    width: 30%;
+    padding: 1%;
+    background-color: rgb(60, 60, 60);
+    display: flex;
+    position: fixed;
+    justify-content: space-evenly;
+    height: 2.5rem;
+    border-radius: 0.5rem;
+    margin-left: 35%;
+    margin-top: 2rem;
+    z-index: +5;
+    box-shadow: 4px 4px 4px black;
+    
+}
+
+.subNavbar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgb(161, 160, 160);
+    font-size: 1.2rem;
+    font-weight: 500;
 }
 
 .crossLogo {
     margin-left: 80%;
 }
 
-.MenuOpenButton {
+.MenuDivider {
+    color: black;
+    font-size: 1.5rem;
+    font-weight: 10;
+    margin: auto;
+    margin-left: 0;
+    margin-right: 0;
 }
 
 
@@ -88,7 +94,6 @@ a { color: inherit; }
 /*********************Logo*****************************/
 .arrowCage {
     margin : 10%;
-    
     margin-top: 6%;
     margin-bottom: 0;
 }
@@ -252,9 +257,8 @@ a { color: inherit; }
     width: 80%;
     margin: auto;
     border-radius: 0.4rem;
-    margin-top: 1.5rem;
+    margin-top: 3rem;
     box-shadow: 0.1rem 0.2rem 0.5rem black;
-    
     
 }
 
